--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-cli": "^4.9.0"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
