--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "build": "webpack",
     "start": "node server.js"
   },
@@ -15,16 +15,16 @@
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "babel-loader": "^8.1.0",
     "chokidar": "^3.4.1",
     "express": "^4.17.1",
-    "@hotwired/stimulus": "^3.0.0",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "webpack": "^4.43.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-cli": "^4.9.0"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-middleware": "^3.7.2"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "mocha": "^9.1.3"
   }
 }
