--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "build": "webpack",
     "start": "node server.js"
   },
@@ -20,11 +20,13 @@
     "babel-loader": "^8.1.0",
     "chokidar": "^3.4.1",
     "express": "^4.17.1",
+    "jest": "^27.3.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^3.7.2"
   },
   "devDependencies": {
-    "mocha": "^9.1.3"
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/register": "^7.15.3"
   }
 }
