--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An educational phone link generator",
   "main": "index.js",
   "author": "Cody Brooks",
-  "license": "MIT", 
+  "license": "MIT",
   "scripts": {
     "start": "node server.js"
   },
@@ -15,11 +15,12 @@
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "babel-loader": "^8.1.0",
     "chokidar": "^3.4.1",
     "express": "^4.17.1",
-    "@hotwired/stimulus": "^3.0.0",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.0",
+    "libphonenumber-js": "^1.9.42",
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2"
   }
