--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "node": ">=11"
   },
   "dependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-env": "^7.16.0",
     "@hotwired/stimulus": "^3.0.0",
     "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "babel-loader": "^8.1.0",
@@ -23,5 +23,6 @@
     "libphonenumber-js": "^1.9.42",
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2"
-  }
+  },
+  "devDependencies": {}
 }
