--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@capacitor/core": "^3.3.1",
+    "@capacitor/ios": "^3.3.1",
     "@hotwired/stimulus": "^3.0.0",
     "@hotwired/stimulus-webpack-helpers": "^1.0.0",
     "babel-loader": "^8.1.0",
@@ -23,5 +25,8 @@
     "libphonenumber-js": "^1.9.42",
     "webpack": "^4.43.0",
     "webpack-dev-middleware": "^3.7.2"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^3.3.1"
   }
 }
